--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2015-rollup": "^1.2.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.3",
     "jasmine-core": "^2.4.1",
+    "jwt-simple": "^0.5.1",
     "karma": "^1.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
@@ -48,6 +51,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript-preprocessor": "^0.3.0",
     "karma-webpack": "^1.8.0",
+    "mongoose": "^4.9.4",
     "npm-run-all": "^3.0.0",
     "phantomjs-prebuilt": "^2.1.12",
     "publish-please": "^2.2.0",
